CREATE DATABASE IF NOT EXISTS COP4331;
USE COP4331;

CREATE TABLE Users
(
    ID INT NOT NULL AUTO_INCREMENT,
    FirstName VARCHAR(50) NOT NULL DEFAULT '',
    LastName VARCHAR(50) NOT NULL DEFAULT '',
    Login VARCHAR(50) NOT NULL DEFAULT '',
    Password VARCHAR(50) NOT NULL DEFAULT '',
    PRIMARY KEY (ID)
) ENGINE=InnoDB;

CREATE TABLE Colors
(
    ID INT NOT NULL AUTO_INCREMENT,
    Name VARCHAR(50) NOT NULL DEFAULT '',
    UserID INT NOT NULL,
    PRIMARY KEY (ID),
    FOREIGN KEY (UserID) REFERENCES Users(ID)
        ON DELETE CASCADE
) ENGINE=InnoDB;

CREATE TABLE Contacts
(
    ID INT NOT NULL AUTO_INCREMENT,
    FirstName VARCHAR(50) NOT NULL DEFAULT '',
    LastName VARCHAR(50) NOT NULL DEFAULT '',
    Phone VARCHAR(50) NOT NULL DEFAULT '',
    Email VARCHAR(50) NOT NULL DEFAULT '',
    UserID INT NOT NULL,
    PRIMARY KEY (ID),
    FOREIGN KEY (UserID) REFERENCES Users(ID)
        ON DELETE CASCADE
) ENGINE=InnoDB;

INSERT INTO Users (FirstName, LastName, Login, Password)
VALUES ('Sam','Hill','SamH','Test'); -- For test purpopses only, remove it after testing is done

CREATE USER 'DANNY'@'%' IDENTIFIED BY 'WeLoveCOP4331';
GRANT ALL PRIVILEGES ON COP4331.* TO 'DANNY'@'%';
FLUSH PRIVILEGES;