@startuml

class User {
  id
  firstName
  lastName
  login
  password
}

class Color {
  id
  name
  userId
}

class AuthService {
  login()
  register()
}

class ColorService {
  addColor()
  searchColors()
  deleteColor()
}

User "1" --> "0..*" Color : owns

AuthService --> User
ColorService --> Color
ColorService --> User

@enduml